--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,28 @@ header {
     padding-left: 400px;
     padding-right: 400px;
 }
+
+.line-break {
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.ingredients {
+    text-align: left;
+    padding-left: 100px;
+    padding-right: 400px;
+    font-size: 25px;
+}
+
+.cooking-picture {
+    padding-left: 400px;
+    padding-right: 400px;
+}
+
+.directions {
+    text-align: left;
+    padding-left: 100px;
+    padding-right: 400px;
+    font-size: 25px;
+    list-style-type: disc;
+}
