--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,15 @@ header {
     font-size: 60px;
 }
 
+.recipe {
+    text-align: center;
+    font-size: 35px;
+    padding-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    letter-spacing: 1.5px;
+}
+
 .recipe-picture {
     padding-left: 400px;
     padding-right: 400px;
